--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <title>Online Tuner</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <canvas class="frequency-bars"></canvas>
@@ -15,13 +15,19 @@
 <div class="notes">
   <div class="notes-list"></div>
   <div class="frequency"> <span>Hz</span></div>
+  <div>
+    <button id="startStop">Start</button>
+    <button id="toggleAutoMode">Toggle auto mode</button>
+    <audio controls></audio>
+  </div>
 </div>
-<script src="https://cdn.bootcss.com/sweetalert/2.1.0/sweetalert.min.js"></script>
-<script src="aubio.js"></script>
-<script src="tuner.js"></script>
-<script src="meter.js"></script>
-<script src="frequency-bars.js"></script>
-<script src="notes.js"></script>
-<script src="app.js"></script>
+
+
+<script src="js/aubio.js"></script>
+<script src="js/tuner.js"></script>
+<script src="js/meter.js"></script>
+<script src="js/frequency-bars.js"></script>
+<script src="js/notes.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
