Moved libs resources

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 
 
-<script src="js/aubio.js"></script>
+<script src="js/libs/aubio.js"></script>
 <script src="js/tuner.js"></script>
 <script src="js/meter.js"></script>
 <script src="js/frequency-bars.js"></script>
