--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <div>
     <button id="startStop">Start</button>
     <button id="toggleAutoMode">Toggle auto mode</button>
-    <audio controls></audio>
+    <input id="inputUpload" type="file">
+    <audio id="audio" controls></audio>
   </div>
 </div>
 
