Cleaned and fixed style

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
   <div class="notes-list"></div>
   <div class="frequency"> <span>Hz</span></div>
   <div>
-    <button id="startStop">Start</button>
-    <button id="toggleAutoMode">Toggle auto mode</button>
+    <button id="startStop">START</button>
+<!--    <button id="toggleAutoMode">Toggle auto mode</button>-->
+    <button id="clearAudio">CLEAR AUDIO</button>
+    <button id="uploadButton">LOAD</button>
     <input id="inputUpload" type="file">
     <audio id="audio" controls></audio>
   </div>
